# _data_gouv

./: .gitignore  DEPENDANCES_FINALE.7z  DEPENDENCE_FIN.py  EXAMPLE.xml  EXTRACTION_CDR.py  MON.SPARK_FT_PRPD_EQT_dependencies.xlsx  README.md  demo.py  dep_bdi.py  dependencies_with_raw_server.xlsx  donnees.json  dwh.py  fields.py  files.py  format_json.py  generate_all_dependencies.py  import_osV3.py  lineage_MON.FT_A_DATA_TRANSFER.xlsx  lineage_results.xlsx  lineage_results_2_compute_and_insert_contract_snapshot_activity.hql.xlsx  lineage_resultscompute_and_insert_contract_snapshot_activity.hql.xlsx  lineage_sortedMON.FT_A_DATA_TRANSFER.xlsx  lineage_sortedMON.FT_GLOBAL_ACTIVITY_DAILY.xlsx  load_fields.py  main.py  manifest.in  output_file_with_cycles.xlsx  parsing.py  pyproject.toml  requirements.txt  schema_flow_file.txt  setup.py  sqlglot_test.py  sqllineage.py  test.ipynb  test.py  tryout.py  tuto_rgex.py  update_dependencies.xlsx  utils.py  (+1 more)
DEPENDANCES_FINALE/: DEPENDANCES_FINALE.py
data_lineage/: clean.py  data_sources.py  fields.py  format_json.py  utils.py
dependances_hives/: get_dependance_table_hive.py  utils.py
examples/: dep_bdi.py  extract_processors.py  generate_all_dependencies.py  genrate_fields_lineage
ocm_data_gouv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
