[project]
name = "ocm-data-gouv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "regex>=2024.11.6",
    "sqlalchemy>=2.0.38",
    "sqlglot>=26.4.1",
    "sqllineage>=1.5.4",
    "sqlparse>=0.5.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100


